# NEMS

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.claude/commands/: layer.md
docs/source/: conf.py  environment.yml  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/source/_templates/: custom-class-template.rst
docs/source/api/: nems.backends.rst  nems.backends.scipy.rst  nems.backends.tf.rst  nems.distributions.rst  nems.layers.base.rst  nems.layers.rst  nems.metrics.rst  nems.models.rst  nems.preprocessing.rst  nems.preprocessing.spectrogram.rst  nems.rst  nems.tools.demo_data.rst  nems.tools.rst  nems.visualization.rst
docs/source/tutorials/: intro.ipynb  tutorials.rst
nems/: __init__.py  initializers.py  modelspec.py  preprocessing.py  registry.py
nems/analysis/: test_prediction.py
nems/backends/: __init__.py  base.py
nems/backends/scipy/: __init__.py  backend.py  cost.py
nems/distributions/: __init__.py  base.py  beta.py  exponential.py  gamma.py  half_normal.py  normal.py  uniform.py
nems/layers/: __init__.py  algebra.py  conv2d.py  filter.py  nonlinearity.py  numpy.py  state.py  stp.py  tools.py  weight_channels.py
nems/metrics/: __init__.py  correlation.py  mi.py
nems/models/: CNN.py  LN.py  Multitask.py  __init__.py  base.py  dataset.py  reconstruction.py
nems/plots/: state.py
nems/plugins/: default_fitters.py  default_initializers.py
nems/preprocessing/: __init__.py  filters.py  mask.py  merge.py  normalization.py  raster.py  split.py
nems/tf/: cnnlink_new.py  loss_functions.py
nems/tools/: __init__.py  arrays.py  debug.py  dstrf.py  epoch.py  io.py  json.py  log.py  lookup.py  mapping.py  recording.py  signal.py  uri.py
nems/visualization/: __init__.py  fitter.py  layers.py  metrics.py  model.py  tools.py
scripts/: export_from_rec.py
tests/: __init__.py  conftest.py  test_equality.py  test_registry.py
tests/backends/: __init__.py
tests/layers/: __init__.py  test_conv2d.py  test_datamap.py  test_fir.py  test_hrtf_mlp.py  test_layer.py  test_nonlinearity.py  test_numpy.py  test_parameter.py  test_phi.py  test_state.py  test_stp.py  test_weight_channels.py
tests/models/: __init__.py  test_dataset.py  test_model.py
tests/preprocessing/: __init__.py  test_normalization.py  test_split.py
tests/tools/: __init__.py  test_arrays.py  test_json.py
tutorials/: 03_cnn_model.py  03_cnn_model_dummy_data.py  04_backend_fits.py  05_auditory_population_fit.py  10_new_layers_pt1.py  10_preprocessing.py  11_diagnosing_fits.py  11_new_layers_pt1.py  12_auditory_dstrf.py  13_state.py  14_manifold_projection.py  14_nn_simple.ipynb  14_nn_simple.py  16_cnn_test.py  1_simple_fit.py  2_auditory_data_fit.py  2_less_simple_fit.py  3_auditory_cnn.py  3_cnn_model.py  3_cnn_model_dummy_data.py  3_keywords.py  4_backend_fits.py  4_freeze_parameters.py  5_auditory_population_fit.py  5_preprocessing.py  6_less_simple_fit.py  6_new_layers_pt1.py  7_diagnosing_fits.py  7_keywords.py  8_auditory_data_fit.py  8_freeze_parameters.py  9_auditory_dstrf.py  9_preprocessing.py  __init__.py  temp_tut.py
tutorials/notebooks/: 1_simple_fit_notebook.ipynb
(+26 files in other folders)
