[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyNEMS"
version = "0.0.3"
description = "Fit and evaluate models of sensory encoding and decoding."
readme = "README.md"
authors = [
    { name = "Jacob Pennington", email = "jacob.p.neuro@gmail.com" },
    { name = "Stephen David", email = "lbhb.ohsu@gmail.com"}
    ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["neuroscience", "auditory", "sensory", "encoding", "strf"]
dependencies = [
    "numpy>=1.24.4, <2.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.2",
    "numexpr>=2.8.3",
    "numba", "pandas", "requests","h5py","joblib",
]
# temp removed
#    "numba>=0.57.0"
requires-python = ">=3.9"
#requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]
tf = ["tensorflow[and-cuda] >= 2.9, <=2.11"]
io = ["pandas", "requests","h5py"]

[project.urls]
Homepage = "https://github.com/LBHB/NEMS"

[tool.setuptools.packages.find]
exclude = ["tutorials*", "tests*"]
